# subscriptions-to-csv

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  README.md  flake.nix  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  subscriptions.txt  test_feature.py  test_release.md  workflow_test.py
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: update-flake-version.sh
subscriptions_to_csv/: __init__.py  cli.py  converter.py
tests/: README.md  test_main.py
