[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subscriptions-to-csv"
version = "1.0.0"
description = "Convert subscription lists to CSV with EUR conversion"
homepage = "https://github.com/MBanucu/subscriptions-to-csv"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Subscription Converter Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]
dependencies = []
keywords = ["csv", "subscriptions", "eur", "conversion", "finance"]

[project.scripts]
subscriptions-to-csv = "subscriptions_to_csv.cli:main"

[tool.setuptools.packages.find]
include = ["subscriptions_to_csv*"]